commit das alterações solicitadas no desafio

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -80,7 +80,14 @@
         "allowExpressions": true
       }
     ],
-    "@typescript-eslint/camelcase": "off"
+    "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/explicit-module-boundary-types": [
+      "error",
+      {
+        "allowedName": ["ignoredFunctionName", "ignoredMethodName"]
+      }
+    ]
+
   },
   "settings": {
     "react": {
